2708. Проєкт Закону про працю

--- a/Закони/Про_Кабінет_Міністрів_України.md
+++ b/Закони/Про_Кабінет_Міністрів_України.md
@@ -150,7 +150,7 @@
 
     7) заявою про відсутність заборгованості зі сплати аліментів на утримання дитини, сукупний розмір якої перевищує суму відповідних платежів за шість місяців з дня пред’явлення виконавчого документа до примусового виконання.
 
-Трудова книжка, документи про освіту (спеціальність, кваліфікацію), стан здоров’я та інші документи, які подаються членом Кабінету Міністрів України під час призначення його на посаду, зберігаються за місцем роботи.
+Документи про освіту (спеціальність, кваліфікацію), стан здоров’я та інші документи, які подаються членом Кабінету Міністрів України під час призначення його на посаду, зберігаються за місцем роботи.
 
 6. На кожну посаду члена Кабінету Міністрів України вноситься одна кандидатура.
 
