--- a/Закони/Про_забезпечення_прав_і_свобод_внутрішньо_переміщених_осіб.md
+++ b/Закони/Про_забезпечення_прав_і_свобод_внутрішньо_переміщених_осіб.md
@@ -50,7 +50,7 @@
 
 У разі наявності в документі, що посвідчує особу та підтверджує громадянство України, або документі, що посвідчує особу та підтверджує її спеціальний статус, відмітки про реєстрацію місця проживання на території адміністративно-територіальної одиниці, з якої здійснюється внутрішнє переміщення у зв’язку з обставинами, визначеними у статті 1 цього Закону, довідка про взяття на облік внутрішньо переміщеної особи або рішення про відмову у видачі довідки з обов’язковим зазначенням підстави відмови, підписане керівником уповноваженого органу, видається заявнику в день подання заяви.
 
-У разі відсутності в документі, що посвідчує особу та підтверджує громадянство України, або документі, що посвідчує особу та підтверджує її спеціальний статус, відмітки про реєстрацію місця проживання на території адміністративно-територіальної одиниці, з якої здійснюється внутрішнє переміщення у зв’язку з обставинами, визначеними у статті 1 цього Закону, заявник надає докази, що підтверджують факт проживання на території адміністративно-територіальної одиниці, з якої здійснюється внутрішнє переміщення, на день виникнення обставин, що спричинили внутрішнє переміщення, визначених статтею 1 цього Закону (військовий квиток з відомостями про проходження військової служби, трудова книжка із записами про здійснення трудової діяльності, документ, що підтверджує право власності на рухоме або нерухоме майно, свідоцтво про базову загальну середню освіту, атестат про повну загальну середню освіту, документи про професійно-технічну освіту, документ про вищу освіту (науковий ступінь), довідку з місця навчання, рішення районної, районної у місті Києві чи Севастополі державної адміністрації, виконавчого органу міської чи районної у місті ради про влаштування дитини до дитячого закладу, у прийомну сім’ю, дитячий будинок сімейного типу, встановлення опіки чи піклування, медичні документи, фотографії, відеозаписи тощо).
+У разі відсутності в документі, що посвідчує особу та підтверджує громадянство України, або документі, що посвідчує особу та підтверджує її спеціальний статус, відмітки про реєстрацію місця проживання на території адміністративно-територіальної одиниці, з якої здійснюється внутрішнє переміщення у зв’язку з обставинами, визначеними у статті 1 цього Закону, заявник надає докази, що підтверджують факт проживання на території адміністративно-територіальної одиниці, з якої здійснюється внутрішнє переміщення, на день виникнення обставин, що спричинили внутрішнє переміщення, визначених статтею 1 цього Закону (військовий квиток з відомостями про проходження військової служби, трудова книжка із записами про здійснення трудової діяльності (за наявності), документ, що підтверджує право власності на рухоме або нерухоме майно, свідоцтво про базову загальну середню освіту, атестат про повну загальну середню освіту, документи про професійно-технічну освіту, документ про вищу освіту (науковий ступінь), довідку з місця навчання, рішення районної, районної у місті Києві чи Севастополі державної адміністрації, виконавчого органу міської чи районної у місті ради про влаштування дитини до дитячого закладу, у прийомну сім’ю, дитячий будинок сімейного типу, встановлення опіки чи піклування, медичні документи, фотографії, відеозаписи тощо).
 
 У передбаченому абзацом третім цієї частини випадку уповноважений орган, визначений частиною третьою цієї статті, зобов’язаний розглянути заяву про отримання довідки про взяття на облік внутрішньо переміщеної особи протягом 15 робочих днів та прийняти рішення про видачу заявнику довідки про взяття на облік внутрішньо переміщеної особи або про відмову у видачі довідки з обов’язковим зазначенням підстави відмови, яке підписується керівником цього органу.
 
