--- a/Закони/Про_загальнообов’язкове_державне_соціальне_страхування.md
+++ b/Закони/Про_загальнообов’язкове_державне_соціальне_страхування.md
@@ -530,7 +530,7 @@
 
 Період відпустки для догляду за дитиною до досягнення нею трирічного віку, отримання виплат за окремими видами соціального страхування, крім пенсій усіх видів (за винятком пенсії по інвалідності), включається до страхового стажу як період, за який сплачено страхові внески виходячи з розміру мінімального страхового внеску.
 
-2. Страховий стаж обчислюється за даними персоніфікованого обліку відомостей про застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування, а за періоди до його запровадження - у порядку та на умовах, передбачених законодавством, що діяло раніше.
+2. Страховий стаж обчислюється за даними реєстру застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування, в тому числі даними про трудову діяльність працівників, внесених відповідно до Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування”, а за періоди, за які не внесені дані до реєстру застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування, — у порядку та на умовах, передбачених законодавством, що діяло раніше.
 
 3. Страховий стаж обчислюється в місяцях.
 
