--- a/Закони/Про_загальнообов’язкове_державне_соціальне_страхування_на_випадок_безробіття.md
+++ b/Закони/Про_загальнообов’язкове_державне_соціальне_страхування_на_випадок_безробіття.md
@@ -99,6 +99,8 @@
 
 5. Працюючі пенсіонери у разі звернення до державної служби зайнятості за сприянням у працевлаштуванні мають право на соціальні послуги щодо пошуку підходящої роботи, перенавчання та підвищення кваліфікації, а також на інформаційні та консультаційні послуги, пов’язані з працевлаштуванням профілактичні заходи відповідно до статті 7-1 цього Закону.
 
+6. У разі встановлення рішенням судом факту виконання особою роботи (надання послуг) без укладення трудового договору і сплати єдиного внеску та інших обов’язкових платежів, такі особи втрачають право на отримання матеріального забезпечення на випадок безробіття протягом двох років з дня набрання законної сили рішенням суду.
+
 **Стаття 7.** Види забезпечення та соціальні послуги
 
 1. Видами забезпечення за цим Законом є:
@@ -324,7 +326,7 @@
 
 Центральний орган виконавчої влади, що реалізує державну політику у сфері зайнятості населення та трудової міграції, його територіальні органи, з метою реалізації завдань, покладених на них відповідно до цього Закону та Закону України "Про зайнятість населення", взаємодіють з органами доходів і зборів, центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення, іншими центральними органами виконавчої влади, Державною прикордонною службою України шляхом обміну відповідною інформацією про отримані особами, зареєстрованими в установленому порядку як безробітні, доходи від здійснення підприємницької діяльності, роботи за кордоном, виконання роботи за трудовим договором, у тому числі за сумісництвом, виконання робіт (надання послуг) за цивільно-правовими угодами (договорами), ведення особистого селянського господарства, проведення інших заходів по виконанню цього Закону
 
-2. Виплата пенсій особам, які достроково вийшли на пенсію відповідно до Закону України "Про зайнятість населення", у період до досягнення ними пенсійного віку здійснюється в установленому законодавством України порядку Пенсійним фондом України за рахунок коштів, що відшкодовуються Фондом.
+2. Страховий стаж обчислюється за даними, що містяться у реєстрі застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування, в тому числі даними про трудову діяльність працівників, внесених відповідно до Закону України “Про збір та облік єдиного внеску на загальнообов’язкове державне соціальне страхування”, а за періоди,  за які не внесені дані до реєстру застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування, — у порядку та на умовах, передбачених законодавством, що діяло раніше.
 
 ## Розділ V
 ## МАТЕРІАЛЬНЕ ЗАБЕЗПЕЧЕННЯ НА ВИПАДОК БЕЗРОБІТТЯ
