--- a/Закони/Про_зайнятість_населення.md
+++ b/Закони/Про_зайнятість_населення.md
@@ -566,7 +566,7 @@
 
 Строк стажування за договором не може перевищувати шести місяців.
 
-Запис про проходження стажування роботодавець вносить до трудової книжки.
+Запис про проходження стажування вносяться до реєстру застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування в порядку, встановленому Пенсійним фондом України за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин.
 
 2. Стажування проводиться за індивідуальною програмою під керівництвом працівника підприємства, установи, організації, який має стаж роботи за відповідною професією (спеціальністю) не менш як три роки.
 
