--- a/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
+++ b/Закони/Про_збір_та_облік_єдиного_внеску_на_загальнообов'язкове_державне_соціальне_страхування.md
@@ -633,7 +633,7 @@
 
 **Стаття 17.** Використання інформації з Державного реєстру
 
-1. Інформація з Державного реєстру використовується з додержанням вимог законів України "Про інформацію" та "Про захист персональних даних" виключно для потреб, визначених цим Законом та законами з окремих видів загальнообов'язкового державного соціального страхування, а також для призначення всіх видів державної соціальної допомоги та субсидій для відшкодування витрат на оплату житлово-комунальних послуг, придбання скрапленого газу, твердого та рідкого пічного побутового палива, виявлення фактів використання праці неоформлених працівників та порушень законодавства про працю роботодавцями, банками, підприємствами, установами та організаціями з метою її використання для обслуговування громадян (за їхньою згодою або у випадках та порядку, встановлених законодавством у сфері захисту персональних даних) для аналізу зайнятості випускників закладів професійної (професійно-технічної) освіти, фахової передвищої та вищої освіти та для обміну інформацією з Централізованим банком даних з проблем інвалідності.
+1. Інформація з Державного реєстру використовується з додержанням вимог законів України "Про інформацію" та "Про захист персональних даних" виключно для потреб, визначених цим Законом та законами з окремих видів загальнообов'язкового державного соціального страхування, а також для призначення всіх видів державної соціальної допомоги та субсидій для відшкодування витрат на оплату житлово-комунальних послуг, придбання скрапленого газу, твердого та рідкого пічного побутового палива, виявлення фактів використання праці неоформлених працівників та порушень законодавства про працю роботодавцями, банками, підприємствами, установами та організаціями з метою її використання для обслуговування громадян (за їхньою згодою або у випадках та порядку, встановлених законодавством у сфері захисту персональних даних) для аналізу зайнятості випускників закладів професійної (професійно-технічної) освіти, фахової передвищої та вищої освіти та для обміну інформацією з Централізованим банком даних з проблем інвалідності, а також для накопичення, зберігання та використання інформації про видані, продовжені та обліковані листки непрацездатності.
 
 Інформація з Державного реєстру може надаватися роботодавцям, банкам, підприємствам, установам та організаціям з метою її використання для обслуговування громадян (за їхньою згодою або у випадках та порядку, встановлених законодавством у сфері захисту персональних даних).
 
@@ -651,7 +651,9 @@
 
 Обмін інформацією про відомості, що містять ознаки використання праці неоформлених працівників та порушень законодавства про працю, здійснюється центральним органом виконавчої влади, що забезпечує реалізацію державної політики з питань нагляду та контролю за додержанням законодавства про працю, центральним органом виконавчої влади, що реалізує державну податкову і митну політику, в порядку, затвердженому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
 
-Інформація з Державного реєстру з метою її використання для обслуговування громадян (за їхньою згодою) надається на запит роботодавців, банків, підприємств, установ та організацій у порядку, встановленому Пенсійним фондом за погодженням із центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
+Інформація з реєстру застрахованих осіб Державного реєстру щодо періодів навчання осіб в закладах вищої освіти, а також здобутої ними освіти, набутого стажу надається роботодавцям за згодою застрахованої особи у порядку, встановленому Пенсійним фондом України за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин.
+
+Надання інформації з реєстру застрахованих осіб Державного реєстру іншим юридичним і фізичним особам, крім органів праці та соціального захисту населення, фондів загальнообов’язкового державного соціального страхування, та осіб, передбачених цим Законом, допускається лише за рішенням суду та у випадках, передбачених законом.
 
 6. Інформація з реєстру страхувальників Державного реєстру надається на запит платників єдиного внеску та/або застрахованих осіб у порядку та за формою, встановленими центральним органом виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійним фондом за погодженням з фондами загальнообов’язкового державного соціального страхування.
 
@@ -660,32 +662,54 @@
 Надання інформації з реєстру застрахованих осіб Державного реєстру іншим юридичним і фізичним особам, крім органів праці та соціального захисту населення, фондів загальнообов’язкового державного соціального страхування, допускається лише за рішенням суду у випадках, передбачених законом.
 
 **Стаття 18.** Джерела формування Державного реєстру
+1. Джерелами формування Державного реєстру є відомості, що надходять до центрального органу виконавчої влади, що реалізує державну податкову політику, та Пенсійного фонду від:
 
-1. Джерелами формування Державного реєстру є відомості, що надходять до центрального органу виконавчої влади, що забезпечує формування та реалізує державну податкову і митну політику, та Пенсійного фонду від:
+Єдиного державного реєстру юридичних осіб, фізичних осіб — підприємців та громадських формувань;
+ * платників єдиного внеску;
 
-* державних реєстраторів юридичних осіб та фізичних осіб - підприємців;
+    * застрахованих осіб;
 
-* платників єдиного внеску;
+    * фондів загальнообов’язкового державного соціального страхування;
+    
+    * Державного реєстру актів цивільного стану громадян; 
 
-* застрахованих осіб;
+    * Єдиного державного демографічного реєстру та розпорядників відомчих інформаційних систем, визначених Законом України “Про Єдиний державний демографічний реєстр та документи, що підтверджують громадянство України, посвідчують особу чи її спеціальний статус”;
+    
+    * центрального органу виконавчої влади, що забезпечує реалізацію державної політики у сфері міграції (імміграції та еміграції), громадянства, реєстрації фізичних осіб, біженців та інших визначених законодавством категорій мігрантів;
 
-* фондів загальнообов'язкового державного соціального страхування;
+    * центрального органу виконавчої влади, що реалізує державну політику у сферах забезпечення охорони прав і свобод людини, інтересів суспільства і держави, протидії злочинності, підтримання публічної безпеки і порядку;
+    
+    * центрального органу виконавчої влади, що реалізує державну податкову політику, та його територіальних органів;
+    
+    * центрального органу виконавчої влади, що реалізує державну політику у сфері статистики;
 
-* центрального органу виконавчої влади, що реалізує державну політику у сфері державної реєстрації актів цивільного стану, виконавчих органів сільських, селищних, міських (крім міст обласного значення) рад;
+    * центрального органу виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин;
 
-* органів доходів і зборів та уповноважених суб'єктів для обліку даних Єдиного державного демографічного реєстру;
+    * центрального органу виконавчої влади, що забезпечує формування державної політики у сфері соціального захисту;
 
-* центрального органу виконавчої влади, що реалізує державну політику у сфері статистики;
+    * центрального органу виконавчої влади, що реалізує державну політику у сфері казначейського обслуговування бюджетних коштів;
 
-* державної служби зайнятості;
+    * центрального органу виконавчої влади, що забезпечує формування державної політики у сферах освіти та науки;
+    
+    * державної служби зайнятості;
+    
+    * інших підприємств, установ, організацій та військових частин;
 
-* інших підприємств, установ, організацій та військових частин;
+    * територіальних органів Пенсійного фонду за результатами перевірок платників єдиного внеску;
+    
+    * установ (закладів), осіб, які видають листки непрацездатності;
 
-* центрального органу виконавчої влади, що реалізує державну політику у сфері казначейського обслуговування бюджетних коштів;
+    * інших джерел, передбачених законодавством.
 
-* територіальних органів Пенсійного фонду за результатами перевірок платників єдиного внеску;
+2. Пенсійний фонд в межах повноважень, визначених цим Законом, та виключно з метою ідентифікації особи для цілей, визначених цим Законом, має право отримувати інформацію з наявних державних та єдиних реєстрів, інших інформаційних баз, що перебувають у власності держави або підприємств, установ та організацій, в обсязі інформації про особу, передбаченому цим Законом. Пенсійний фонд в межах повноважень, визначених цим Законом, має право отримувати інформацію з реєстрів територіальних громад. Доступ до інформації здійснюється з дотриманням вимог законів України “Про захист інформації в інформаційно-телекомунікаційних системах”, “Про захист персональних даних”. Порядок інформаційної взаємодії визначається Пенсійним фондом разом з відповідними центральними органами виконавчої влади, держателями реєстрів (інформаційних баз).
 
-* інших джерел, передбачених законодавством.
+3. Інформаційна взаємодія між Пенсійним фондом та розпорядниками реєстрів, інформаційних баз, зазначених у частині другій цієї статті, здійснюється в порядку, визначеному законами, які регулюють певну сферу суспільних відносин, та / або на умовах договорів, укладених з технічним адміністратором.
+
+4. Органи доходів і зборів зобов’язані надавати Пенсійному фонду необхідну для виконання покладених на нього обов’язків інформацію у порядку, визначеному центральним органом виконавчої влади, що забезпечує формування державної податкової політики, та Пенсійним фондом.
+
+5. Порядок та форма надання інформації Пенсійному фонду з Єдиної державної електронної бази з питань освіти встановлюється Пенсійним фондом та  центральним органом виконавчої влади, що забезпечує формування державну політику у сферах освіти і науки.
+
+6. Порядок надання інформації Пенсійному фонду з Державного реєстру актів цивільного стану громадян про смерть фізичної особи визначається Пенсійним фондом разом з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері державної реєстрації актів цивільного стану.
 
 **Стаття 19.** Реєстр страхувальників
 
@@ -717,7 +741,9 @@
 
 1. Реєстр застрахованих осіб - автоматизований банк відомостей, створений для ведення єдиного обліку фізичних осіб, які підлягають загальнообов'язковому державному соціальному страхуванню відповідно до закону.
 
-Реєстр застрахованих осіб складається з електронних облікових карток застрахованих осіб, до яких включаються відомості про застрахованих осіб, інформація про набуття прав на одержання страхових виплат за всіма видами загальнообов’язкового державного соціального страхування та інформація про виплати за всіма видами загальнообов’язкового державного соціального страхування.
+Реєстр застрахованих осіб складається з електронних облікових карток застрахованих осіб, до яких включаються відомості про застрахованих осіб, інформація про набуття та реалізацію ними прав на одержання страхових виплат за всіма видами загальнообов’язкового державного соціального страхування та інформація про виплати за всіма видами загальнообов’язкового державного соціального страхування.
+
+У разі якщо інформація про особу вноситься до Реєстру вперше, проводиться ідентифікація особи з обов’язковим  підтвердженням відповідності реєстраційного номеру облікової картки платника податків даним Державного реєстру фізичних осіб – платників податків та паспортних даних особи (крім осіб, які через свої релігійні переконання відмовляються від прийняття реєстраційного номера облікової картки платника податків та офіційно повідомили про це відповідний контролюючий орган і мають відмітку в паспорті, для яких зазначаються серія (за наявності) та номер документа, що посвідчує особу, з індексом: для осіб з паспортом у формі книжечки —“БК”; для осіб з паспортом у формі пластикової картки (ID-картки) — “Р”; для іноземців та осіб без громадянства, які працювали на території України і не мали реєстраційного номера облікової картки платника податків —“F”)
 
 Реєстр застрахованих осіб формує та веде Пенсійний фонд, користувачами цього реєстру є органи доходів і зборів та фонди загальнообов'язкового державного соціального страхування.
 
@@ -731,79 +757,120 @@
 
 3. На кожну застраховану особу заводиться персональна електронна облікова картка, до якої включаються такі відомості:
 
-    1) умовно-постійна частина картки:
+1) умовно-постійна частина картки:
 
-        * унікальний номер електронної облікової картки;
+    * унікальний номер електронної облікової картки;
+    
+    * номер посвідчення застрахованої особи;
 
-        * номер посвідчення застрахованої особи;
+    * прізвище, ім’я та по батькові на момент створення електронної облікової картки;
 
-        * прізвище, ім’я та по батькові на момент створення електронної облікової картки;
+    * прізвище, ім’я та по батькові на поточний момент;
 
-        * прізвище, ім’я та по батькові на поточний момент;
+    * дата народження;
 
-        * дата народження;
+    * стать;
 
-        * стать;
+    * унікальний номер запису в Єдиному державному демографічному реєстрі та серія, номер і назва документа, з якого взяті відомості до персональної облікової картки;
 
-        * унікальний номер запису в Єдиному державному демографічному реєстрі та серія, номер і назва документа, з якого взяті відомості до персональної облікової картки;
+    * громадянство;
 
-        * громадянство;
+    * відцифрований зразок підпису особи;
 
-        * номер телефону (за згодою);
+    * відцифрований образ обличчя особи;
 
-        * відмітка про смерть;
+    * документи, що посвідчують особу та / або підтверджують її спеціальний статус відповідно до закону;
 
-    2) частина картки, що відображає загальний страховий стаж, заробітну плату (дохід, грошове забезпечення), розмір сплаченого єдиного внеску та інші дані, необхідні для обчислення та призначення страхових виплат за окремими видами загальнообов'язкового державного соціального страхування:
+    * відомості про освіту (рівень та ступінь освіти, кваліфікація, спеціальність);
 
-        * ідентифікаційний номер платника (крім осіб, які через релігійні або інші переконання відмовилися від ідентифікаційного номера);
+    * місце проживання;
 
-        * рік, за який внесено відомості;
+    *номер телефону та адреса електронної пошти;
 
-        * розмір єдиного внеску за відповідний місяць;
+    * відомості про смерть, визнання фізичної особи безвісно відсутньою, оголошення фізичної особи померлою;
 
-        * сума сплаченого єдиного внеску за відповідний місяць;
+2) частина картки, що відображає страховий стаж, заробітну плату (дохід, грошове забезпечення), розмір сплаченого єдиного внеску та інші дані, необхідні для обчислення та призначення страхових виплат за окремими видами загальнообов'язкового державного соціального страхування:
 
-        * професійна назва роботи;
+    * реєстраційний номер облікової картки платника податків (крім осіб, які через свої релігійні переконання відмовляються від прийняття реєстраційного номера облікової картки платника податків та офіційно повідомили про це відповідний контролюючий орган і мають відмітку в паспорті, для яких зазначаються серія (за наявності) та номер документа, що посвідчує особу, з індексом: для осіб з паспортом у формі книжечки —“БК”; для осіб з паспортом у формі пластикової картки (ID-картки) — “Р”; для іноземців та осіб без громадянства, які працювали на території України і не мали реєстраційного номера облікової картки платника податків —“F”);
 
-        * посада;
+    * рік, за який внесено відомості;
 
-        * дані про особливі умови праці, що дають право на пільги із загальнообов'язкового державного соціального страхування;
+    * розмір єдиного внеску за відповідний місяць;
 
-        * сума виплат (доходу), з якої сплачено страхові внески за відповідний місяць;
+    * сума сплаченого єдиного внеску за відповідний місяць;
 
-        * сума призначеної пенсії;
+    * професійна назва роботи;
 
-        * кількість відпрацьованих застрахованою особою календарних днів (годин) за відповідний місяць;
+    * посада із зазначенням структурного підрозділу; 
 
-        * інша інформація, необхідна для обчислення та призначення страхових виплат за окремими видами загальнообов'язкового державного соціального страхування;
+    * відомості про трудову діяльність (про прийняття на роботу, присвоєння, зміну, позбавлення розряду, рангу, класу, звання, категорії, проходження стажування, переведення на іншу роботу, підстави звільнення);
 
-        * інформація про страхові випадки:
+    * інформація про основне місце роботи;
+    
+    * дані про особливі умови праці, що дають право на пільги із загальнообов’язкового державного соціального страхування:
+    
+    * номер списків (розділ, підрозділ) виробництв, робіт, професій, посад і показників, затверджених Кабінетом Міністрів України;
+    
+    * результати атестації умов праці із зазначенням номеру і дати розпорядчого акту;
+    
+    * повна / неповна зайнятість;
+    
+    * кількість відпрацьованих застрахованою особою календарних днів (годин) за відповідний місяць, у тому числі в особливих умовах праці, що дають право на пільги;
+    
+    * сума виплат (доходу), з якої сплачено страхові внески за відповідний місяць;
+    
+    * сума призначеної пенсії;
+    
+    * інша інформація, необхідна для обчислення та призначення страхових виплат за окремими видами загальнообов’язкового державного соціального страхування;
+    
+    * інформація про страхові випадки:
+    
+    * дата страхового випадку;
+    
+    * вид страхового випадку; 
+3) частина картки, що відображає особливості статусу особи:
+    
+    * інформація про належність особи до ветеранів війни, осіб, які постраждали внаслідок Чорнобильської катастрофи, інших ядерних аварій та випробувань, військових навчань із застосуванням ядерної зброї, студентів, курсантів невійськових закладів вищої освіти, які отримують соціальні стипендії, осіб, які отримують державну  допомогу постраждалим учасникам масових акцій громадського протесту та членам їх сімей тощо;
+    
+    * відомості про групу, причину інвалідності (із зазначенням у відповідних випадках нозологічних форм захворювань), строк, на який встановлено інвалідність;
+    
+    * відомості про батьків (усиновлювачів), опікунів, піклувальників та інших представників;
+    
+    * відомості про членів сім’ї, які знаходяться на утриманні застрахованої особи, та її дітей;
+    
+    * відомості про дату виїзду за межі України та дату повернення на територію України;
+    
+    * інформація про судимість за вчинення злочину та про позбавлення права обіймати певні посади чи займатися певною діяльністю;
+    
+    * інформація про підтвердження набутого особою на боці договірної сторони стажу роботи (страхового стажу), для застосовування накопичення періодів стажу роботи (страхового стажу), відповідно до міжнародних договорів;
+    
+    * інша інформація, необхідна для обчислення та призначення виплат за окремими видами загальнообов’язкового державного соціального страхування.
 
-        * дата страхового випадку;
+    Якщо фізична особа має право на пільги згідно з кількома законами,  до  Реєстру включається інформація про всі ознаки такого статусу. У разі коли фізична особа,  яка має і використовує  право  на пільги  на підставі одного із законів України,  використовує також своє право на інші пільги як член сім'ї пільговика, який має право на  пільги згідно з іншими законами,  ця фізична особа включається до Реєстру також як член сім’ї пільговика. Перелік та складові ознак особливостей статусу особи, що включаються до персональної електронної облікової картки, визначається Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин;
+4) частина картки, що відображає здійснення виплат за окремими видами загальнообов’язкового державного соціального страхування: 
+    
+    * вид страхової виплати; 
+    
+    * вид соціальної пільги;
+    
+    * вид соціальної виплати; 
+    
+    * дата, з якої призначено виплату; 
+    
+    * дата початку та закінчення виплати (пільги);
+    
+    * сума виплати (помісячні суми виплати);
+    
+    * індексація страхової виплати.
+5) частина картки, що відображає загальний страховий стаж особи, у тому числі набутий нею за період до 01 січня 2004 року (далі — електронна трудова книжка). Відомості, зазначені в цьому пункті щодо періодів роботи та інших періодів, що відповідно до законодавства, що діяло раніше, зараховувалися до стажу роботи, та займаних особою посад за період до набрання чинності Законом України “Про працю” вносяться до даних реєстру застрахованих осіб на підставі трудової книжки особи, а при відсутності трудової книжки або відповідних записів у ній — документів, передбачених порядком підтвердження наявного стажу роботи при відсутності трудової книжки або відповідних записів у ній, встановленим Кабінетом Міністрів України. Порядок та черговість подання відомостей для створення електронних трудових книжок визначається Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин.
 
-        * вид страхового випадку;
+Персоніфіковані відомості, що включені до електронної облікової картки особи зберігаються протягом усього життя особи, а після її смерті — протягом 75 років.
 
-    3) частина картки, що відображає здійснення виплат за окремими видами загальнообов’язкового державного соціального страхування:
+Інформація, що зазнавала змін, зберігається з відповідною приміткою.
 
-        * вид страхової виплати;
+5. Зміни та уточнення вносяться до відомостей реєстру застрахованих осіб у порядку, встановленому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин. 
 
-        * вид соціальної пільги;
-
-        * вид соціальної виплати;
-
-        * дата, з якої призначено виплату;
-
-        * дата початку та закінчення виплати (пільги);
-
-        * сума виплати (помісячні суми виплати);
-
-        * індексація страхової виплати.
-
-Персоніфіковані відомості, включені до персональної електронної облікової картки застрахованої особи, зберігаються в Пенсійному фонді протягом усього життя особи, а після її смерті - протягом 75 років на паперових та/або електронних носіях за наявності засобів, що гарантують ідентичність паперового та електронного документів.
-
-4. Центральний орган виконавчої влади, що реалізує державну політику у сфері державної реєстрації актів цивільного стану, за формою, встановленою відповідно до законодавства, протягом десяти робочих днів після реєстрації смерті особи подає відповідні відомості територіальному органу Пенсійного фонду.
-
-5. Зміни та уточнення вносяться до відомостей реєстру застрахованих осіб у порядку, встановленому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сферах трудових відносин, соціального захисту населення.
+Зміна до відомостей про прізвище, ім’я та по батькові особи на поточний момент; реєстраційний номер облікової картки платника податків; дату народження, місце народження; стать; громадянство; освіту; серію та номер паспорту; номер телефону; адресу місця проживання може здійснюватися за заявою застрахованої особи у порядку, встановленому Пенсійним фондом за погодженням з центральним органом виконавчої влади, що забезпечує формування державної політики у сфері трудових відносин.
 
 6. Відомості про страховий стаж та заробітну плату (дохід, грошове забезпечення), розмір сплаченого єдиного внеску та інші дані, що містяться в реєстрі застрахованих осіб, використовуються для обчислення та призначення страхових виплат за загальнообов'язковим державним соціальним страхуванням.
 
@@ -985,7 +1052,7 @@
 
 1. Цей Закон набирає чинності з 1 січня 2011 року, крім підпункту 8 частини першої статті 1, підпунктів 7 та 8 (в частині пред'явлення посвідчення застрахованої особи), 9 частини другої статті 6, абзацу другого підпункту 1 частини третьої статті 20, статті 22 цього Закону, які набирають чинності з 1 січня 2014 року.
 
-1-1. Зупинити дію підпункту 8 частини першої статті 1, підпунктів 7, 8 (в частині пред'явлення посвідчення застрахованої особи) та 9 частини другої статті 6, абзацу другого підпункту 1 частини третьої статті 20, статті 22 цього Закону до 1 січня 2020 року.
+1-1. Зупинити дію підпункту 8 частини першої статті 1, підпунктів 7, 8 (в частині пред'явлення посвідчення застрахованої особи) та 9 частини другої статті 6, абзацу другого підпункту 1 частини третьої статті 20, статті 22 цього Закону до 1 січня 2026 року.
 
 1-2. Установити, що виплата резидентом України доходу фізичним особам - нерезидентам, які здійснюють підприємницьку діяльність у сфері кінематографії не на території України, не є об’єктом нарахування єдиного внеску на загальнообов’язкове державне соціальне страхування.
 
