--- a/Закони/Про_колективні_договори_і_угоди.md
+++ b/Закони/Про_колективні_договори_і_угоди.md
@@ -144,11 +144,11 @@
 
 **Стаття 9.** Дія колективного договору, угоди
 
-Положення колективного договору поширюються на всіх працівників підприємств незалежно від того, чи є вони членами профспілки, і є обов'язковими як для роботодавця, так і для працівників підприємства. Положення генеральної, галузевої (міжгалузевої), територіальної угод діють безпосередньо і є обов'язковими для всіх суб'єктів, що перебувають у сфері дії сторін, які підписали угоду.
+Положення колективного договору щодо оплати праці, тривалості робочого часу, часу відпочинку, охорони праці, а також гарантій і компенсацій, що надаються відповідно до законодавства, поширюються на всіх працівників, які перебувають у трудових відносинах з цим роботодавцем. Дія інших положень колективного договору поширюється на працівників на умовах, визначених цим колективним договором. Положення генеральної, галузевої (міжгалузевої), територіальної угод діють безпосередньо і є обов’язковими для всіх суб’єктів, що перебувають у сфері дії сторін, які підписали угоду.
 
-Колективний договір, угода набирають чинності з дня їх підписання представниками сторін або з дня, зазначеного у колективному договорі, угоді.
+Колективний договір, угода набирають чинності з дня їх підписання представниками сторін, якщо інше не визначено у колективному договорі, угоді. Строк дії колективного договору, угоди визначається сторонами.
 
-Після закінчення строку дії колективний договір, угода продовжує діяти до того часу, поки сторони не укладуть новий або не переглянуть чинний, якщо інше не передбачено договором, угодою.
+До закінчення строку, на який укладено договір, угоду, сторони повинні розпочати колективні переговори з укладення нового колективного договору, угоди. Якщо до закінчення строку дії колективного договору, угоди переговори не завершено, строк їх дії подовжується на період переговорів, але не більше ніж на один рік
 
 Колективний договір, угода зберігають чинність у разі зміни складу, структури, найменування роботодавця, від імені якого укладено цей договір, угоду.
 
