--- a/Закони/Про_нотаріат.md
+++ b/Закони/Про_нотаріат.md
@@ -969,7 +969,7 @@
 
 Про видачу свідоцтва про право на спадщину на ім'я неповнолітнього чи недієздатного спадкоємця нотаріус або уповноважена на це посадова особа відповідного органу місцевого самоврядування повідомляє органи опіки та піклування за місцем проживання спадкоємця для охорони його майнових інтересів.
 
-Свідоцтво про право на спадщину на земельну частку (пай) після смерті фізичних осіб, евакуйованих із зони відчуження, відселених із зони безумовного (обов’язкового) або зони гарантованого добровільного відселення, а також громадян України, які самостійно переселилися з територій, що зазнали радіоактивного забруднення, і на момент евакуації, відселення або самостійного переселення були членами колективних або інших сільськогосподарських підприємств, а також пенсіонерів з їх числа, які проживали у сільській місцевості, може бути видане уповноваженою на це посадовою особою відповідного органу місцевого самоврядування спадкоємцям першої та другої черги за законом (як у випадку спадкування ними за законом, так і у випадку спадкування ними за заповітом) і за правом представлення на підставі трудової книжки члена колективного або іншого сільськогосподарського підприємства чи засвідченого належним чином витягу з неї, за наявності в ній відповідного запису, чи рішення суду, яке набрало законної сили, про членство в колективному або іншому сільськогосподарському підприємстві, що розташовувалося на цій території.
+Свідоцтво про право на спадщину на земельну частку (пай) після смерті фізичних осіб, евакуйованих із зони відчуження, відселених із зони безумовного (обов’язкового) або зони гарантованого добровільного відселення, а також громадян України, які самостійно переселилися з територій, що зазнали радіоактивного забруднення, і на момент евакуації, відселення або самостійного переселення були членами колективних або інших сільськогосподарських підприємств, а також пенсіонерів з їх числа, які проживали у сільській місцевості, може бути  видане уповноваженою на це посадовою особою відповідного органу місцевого самоврядування спадкоємцям першої та другої черги за законом (як у випадку  спадкування ними за законом, так і у випадку спадкування ними  за заповітом) і за правом представлення на підставі трудової книжки (даних реєстру застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування) про члена колективного або іншого сільськогосподарського підприємства чи засвідченого належним чином витягу з неї, за наявності в ньому відповідного запису, чи рішення суду, яке набрало законної сили, про членство в колективному або іншому сільськогосподарському підприємстві,  що розташовувалося на цій території.
 
 Свідоцтво про право на спадщину на земельну частку (пай) після смерті фізичних осіб може бути видане уповноваженою на це посадовою особою відповідного органу місцевого самоврядування спадкоємцям першої та другої черги за законом (як у випадку спадкування ними за законом, так і у випадку спадкування ними за заповітом) і за правом представлення на підставі сертифіката на право на земельну частку (пай) чи договорів купівлі-продажу, дарування, міни, чи свідоцтва про право на спадщину, чи рішення суду про визнання права на земельну частку (пай).
 
