--- a/Кодекси/Кодекс_адміністративного_судочинства_України.md
+++ b/Кодекси/Кодекс_адміністративного_судочинства_України.md
@@ -2816,7 +2816,7 @@
 
     1) оголошує склад суду, а також прізвища секретаря судового засідання, перекладача, спеціаліста, з’ясовує наявність підстав для відводів;
 
-    2) з’ясовує, чи бажають сторони вирішити спір шляхом примирення або звернутися до суду для проведення врегулювання спору за участю судді;
+    2) з’ясовує, чи бажають сторони вирішити спір шляхом примирення провести позасудове врегулювання спору шляхом проведення медіації у сфері трудових відносин або звернутися до суду для проведення врегулювання спору за участю судді;
 
     3) у разі необхідності заслуховує уточнення позовних вимог та заперечень проти них та розглядає відповідні заяви;
 
@@ -3526,7 +3526,7 @@
 
     3) об’єктивної неможливості розгляду цієї справи до вирішення іншої справи, що розглядається в порядку конституційного провадження, адміністративного, цивільного, господарського чи кримінального судочинства, - до набрання законної сили судовим рішенням в іншій справі; суд не може посилатися на об’єктивну неможливість розгляду справи у випадку, коли зібрані докази дозволяють встановити та оцінити обставини (факти), які є предметом судового розгляду;
 
-    4) звернення обох сторін з клопотанням про надання їм часу для примирення - до закінчення строку, про який сторони заявили у клопотанні;
+    4) звернення обох сторін з клопотанням про надання їм часу для примирення або для проведення медіації у сфері трудових відносин - до закінчення строку, про який сторони заявили у клопотанні;
 
     5) перебування сторони або третьої особи, яка заявляє самостійні вимоги щодо предмета спору, у складі Збройних Сил України або інших утворених відповідно до закону військових формувань, що переведені на воєнний стан або залучені до проведення антитерористичної операції, - до припинення перебування сторони або третьої особи, яка заявляє самостійні вимоги щодо предмета спору, у складі Збройних Сил України або інших утворених відповідно до закону військових формувань, що переведені на воєнний стан або залучені до проведення антитерористичної операції;
 
