--- a/Кодекси/Кодекс_цивільного_захисту_України.md
+++ b/Кодекси/Кодекс_цивільного_захисту_України.md
@@ -2319,7 +2319,7 @@
 
 2. Особи керівного складу та фахівці органів виконавчої влади, органів місцевого самоврядування, суб’єктів господарювання, діяльність яких пов’язана з організацією і здійсненням заходів з питань цивільного захисту, у перший рік призначення на посаду і періодично один раз на три - п’ять років зобов’язані проходити навчання з питань цивільного захисту у відповідних навчально-методичних центрах сфери цивільного захисту.
 
-3. Навчання проводиться відповідно до державного замовлення за рахунок коштів Державного бюджету України, передбачених для фінансування центрального органу виконавчої влади, що забезпечує формування та реалізує державну політику у сфері цивільного захисту, а також за контрактом за рахунок коштів фізичних та юридичних осіб. Відповідні записи про навчання заносяться у трудову книжку.
+3. Навчання проводиться відповідно до державного замовлення за рахунок коштів Державного бюджету України, передбачених для фінансування центрального органу виконавчої влади, що забезпечує формування та реалізує державну політику у сфері цивільного захисту, а також за контрактом за рахунок коштів фізичних та юридичних осіб.
 
 4. Рада міністрів Автономної Республіки Крим, місцеві державні адміністрації, органи місцевого самоврядування визначають щорічну потребу в навчанні керівного складу та фахівців, забезпечують періодичність його проведення та закріплюють на правах оперативного управління або передають у власність навчально-методичним центрам сфери цивільного захисту підприємства, установи та організації, приміщення, споруди та інше майно, необхідне для забезпечення їх діяльності.
 
@@ -2674,7 +2674,7 @@
 
 **Стаття 116.** Забезпечення громадянських прав та свобод осіб рядового і начальницького складу служби цивільного захисту, працівників аварійно-рятувальних служб
 
-1. Особи рядового і начальницького складу служби цивільного захисту мають право утворювати свої громадські об’єднання відповідно до законодавства. Особи рядового і начальницького складу служби цивільного захисту не можуть бути членами політичних партій, організацій чи рухів. Особам рядового і начальницького складу служби цивільного захисту, працівникам професійних аварійно-рятувальних служб забороняється організовувати страйки або брати в них участь.
+1. Особи рядового і начальницького складу служби цивільного захисту мають право утворювати свої громадські об’єднання відповідно до законодавства. Особи рядового і начальницького складу служби цивільного захисту не можуть бути членами політичних партій, організацій чи рухів.
 
 2. Особи рядового і начальницького складу служби цивільного захисту на період проходження такої служби зобов’язані зупинити членство у політичних партіях, організаціях чи рухах.
 
