--- a/Кодекси/Кримінально-виконавчий_кодекс_України.md
+++ b/Кодекси/Кримінально-виконавчий_кодекс_України.md
@@ -359,7 +359,7 @@
 
 Власник підприємства, установи, організації або уповноважений ним орган за місцем роботи засудженого зобов'язаний:
 
-* не пізніше трьох днів після одержання копії судового рішення звільнити засудженого з посади, яку він обіймає, або від того виду професійної діяльності, права на який його позбавлено, внести до трудової книжки засудженого запис про те, на якій підставі, на який строк і які посади він позбавлений права обіймати або яким видом професійної діяльності він позбавлений права займатися, та повідомити уповноважений орган з питань пробації про виконання судового рішення;
+* не пізніше трьох днів після одержання копії судового рішення звільнити засудженого з посади, яку він обіймає, або від того виду професійної діяльності, права на який його позбавлено, подати для внесення до реєстру застрахованих осіб Державного реєстру загальнообов’язкового державного соціального страхування до Пенсійного фонду України інформацію про підстави, на який строк і які посади він позбавлений права обіймати або яким видом професійної діяльності він позбавлений права займатися, та повідомити уповноважений орган з питань пробації про виконання судового рішення;
 
 * за вимогою уповноваженого органу з питань пробації надавати йому документи, пов'язані з виконанням покарання.
 
