--- a/Кодекси/Цивільний_процесуальний_кодекс_України/Цивільний_процесуальний_кодекс_України_3.md
+++ b/Кодекси/Цивільний_процесуальний_кодекс_України/Цивільний_процесуальний_кодекс_України_3.md
@@ -433,7 +433,7 @@
 
     1) оголошує склад суду, а також прізвища, імена та по батькові секретаря судового засідання, перекладача, спеціаліста, з’ясовує наявність підстав для відводів;
 
-    2) з’ясовує, чи бажають сторони укласти мирову угоду, передати справу на розгляд третейського суду або звернутися до суду для проведення врегулювання спору за участю судді;
+    2) з’ясовує, чи бажають сторони укласти мирову угоду, провести позасудове врегулювання спору шляхом медіації у сфері трудових відносин, передати справу на розгляд третейського суду або звернутися до суду для проведення врегулювання спору за участю судді;
 
     3) у разі необхідності заслуховує уточнення позовних вимог та заперечень проти них та розглядає відповідні заяви;
 
@@ -639,7 +639,7 @@
 
 2. Суд розглядає справу по суті протягом тридцяти днів з дня початку розгляду справи по суті.
 
-3. Провадження у справі на стадії її розгляду по суті зупиняється тільки з підстав, встановлених пунктами 1-3 частини першої статті 251 та пунктами 1-3 частини першої статті 252 цього Кодексу.
+3. Провадження у справі на стадії її розгляду по суті зупиняється тільки з підстав, встановлених пунктами 1-3 частини першої статті 251 та пунктами 1—3, 71 частини першої статті 252 цього Кодексу.
 
 **Стаття 211.** Судове засідання
 
@@ -1149,6 +1149,8 @@
 
     7) надходження заяви про відвід;
 
+    7-1) звернення обох сторін з клопотанням про зупинення провадження у справі у зв’язку з проведенням медіації у сфері трудових відносин;
+    
     8) звернення із судовим дорученням про надання правової допомоги, вручення виклику до суду чи інших документів до іноземного суду або іншого компетентного органу іноземної держави;
 
     9) прийняття ухвали про тимчасове вилучення доказів державним виконавцем для дослідження судом;
@@ -1186,6 +1188,8 @@
     10) пунктом 6 частини першої статті 252 цього Кодексу, - до надходження відповіді від суду на доручення щодо збирання доказів;
 
     11) пунктом 7 частини першої статті 252 цього Кодексу, - до вирішення питання про відвід;
+
+    11-1) пунктом 71 частини першої статті 252 цього Кодексу, - на час проведення медіації у сфері трудових відносин, але не більше тридцяти днів з дня постановлення ухвали судом;
 
     12) пунктом 8 частини першої статті 252 цього Кодексу, - до надходження відповіді від іноземного суду або іншого компетентного органу іноземної держави на судове доручення про надання правової допомоги, вручення виклику до суду чи інших документів;
 
